--- a/codepipeline-stack.yaml
+++ b/codepipeline-stack.yaml
@@ -284,6 +284,7 @@ Resources:
                 - if [ -z "$CDK_STACK" ] ; then cdk bootstrap ; else echo "Already bootstrapped" ; fi
                 - cdk deploy Services --context admin_role=${USER_ROLE_ARN} --require-approval=never --verbose -O ./out/out.json
                 - cdk deploy Applications --require-approval=never --verbose -O ./out/out.json
+                - cdk deploy Odyssey-Workshop-Demo-Alarms --require-approval=never --verbose -O ./out/out.json
           artifacts:
             files: './one-observability-demo/PetAdoptions/cdk/pet_stack/out/out.json'
       LogsConfig:
