--- a/PetAdoptions/cdk/pet_stack/resources/cwagent-fluent-bit-quickstart.yaml
+++ b/PetAdoptions/cdk/pet_stack/resources/cwagent-fluent-bit-quickstart.yaml
@@ -300,6 +300,15 @@ data:
         Skip_Long_Lines     On
         Refresh_Interval    10
         Read_from_Head      ${READ_FROM_HEAD}
+    
+    [INPUT]
+        Name                tcp
+        Listen              0.0.0.0
+        Port                25888
+        Chunk_Size          32
+        Buffer_Size         64
+        Format              none
+        Tag                 emf
 
     [FILTER]
         Name                kubernetes
@@ -324,6 +333,17 @@ data:
         log_stream_prefix   ${HOST_NAME}-
         auto_create_group   true
         extra_user_agent    container-insights
+    
+    [OUTPUT]
+        Name                cloudwatch
+        Match               emf
+        region              ${AWS_REGION}
+        log_key             log
+        log_group_name      /aws/containerinsights/${CLUSTER_NAME}/emf
+        log_stream_prefix   ${HOST_NAME}-
+        auto_create_group   true
+        log_format          json/emf
+        log_retention_days  14
 
   dataplane-log.conf: |
     [INPUT]
@@ -463,10 +483,14 @@ spec:
         kubernetes.io/cluster-service: "true"
     spec:
       containers:
-      - name: fluent-bit
-        image: public.ecr.aws/aws-observability/aws-for-fluent-bit:stable
-        imagePullPolicy: Always
-        env:
+        - name: fluent-bit
+          image: public.ecr.aws/aws-observability/aws-for-fluent-bit:stable
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 25888
+              hostPort: 25888
+              protocol: TCP
+          env:
             - name: AWS_REGION
               valueFrom:
                 configMapKeyRef:
