--- a/PetAdoptions/petsite/petsite/PetSite.csproj
+++ b/PetAdoptions/petsite/petsite/PetSite.csproj
@@ -15,6 +15,7 @@
     <None Include="compilerconfig.json" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Amazon.CloudWatch.EMF" Version="2.1.0" />
     <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="6.0.0" />
     <PackageReference Include="AWSSDK.Core" Version="3.7.202.18" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.7" />
@@ -34,6 +35,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
     <PackageReference Include="prometheus-net" Version="8.0.1" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="8.0.1" />
