--- a/PetAdoptions/cdk/pet_stack/resources/cwagent-fluent-bit-quickstart.yaml
+++ b/PetAdoptions/cdk/pet_stack/resources/cwagent-fluent-bit-quickstart.yaml
@@ -484,7 +484,7 @@ spec:
     spec:
       containers:
         - name: fluent-bit
-          image: public.ecr.aws/aws-observability/aws-for-fluent-bit:stable
+          image: public.ecr.aws/aws-observability/aws-for-fluent-bit:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 25888
@@ -532,30 +532,30 @@ spec:
                   fieldPath: metadata.name
             - name: CI_VERSION
               value: "k8s/1.3.17"
-        resources:
-            limits:
-              memory: 200Mi
-            requests:
-              cpu: 500m
-              memory: 100Mi
-        volumeMounts:
-        # Please don't change below read-only permissions
-        - name: fluentbitstate
-          mountPath: /var/fluent-bit/state
-        - name: varlog
-          mountPath: /var/log
-          readOnly: true
-        - name: varlibdockercontainers
-          mountPath: /var/lib/docker/containers
-          readOnly: true
-        - name: fluent-bit-config
-          mountPath: /fluent-bit/etc/
-        - name: runlogjournal
-          mountPath: /run/log/journal
-          readOnly: true
-        - name: dmesg
-          mountPath: /var/log/dmesg
-          readOnly: true
+          resources:
+              limits:
+                memory: 200Mi
+              requests:
+                cpu: 500m
+                memory: 100Mi
+          volumeMounts:
+          # Please don't change below read-only permissions
+          - name: fluentbitstate
+            mountPath: /var/fluent-bit/state
+          - name: varlog
+            mountPath: /var/log
+            readOnly: true
+          - name: varlibdockercontainers
+            mountPath: /var/lib/docker/containers
+            readOnly: true
+          - name: fluent-bit-config
+            mountPath: /fluent-bit/etc/
+          - name: runlogjournal
+            mountPath: /run/log/journal
+            readOnly: true
+          - name: dmesg
+            mountPath: /var/log/dmesg
+            readOnly: true
       terminationGracePeriodSeconds: 10
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
